Fixing centering of text in collapsed toolbar by adding line-height
Tested in Firefox, Safari, and Chrome. Fixes all three.

--- a/modules/ext.pageTriage.views.toolbar/ext.pageTriage.toolbarView.css
+++ b/modules/ext.pageTriage.views.toolbar/ext.pageTriage.toolbarView.css
@@ -68,4 +68,5 @@ p#mwe-pt-toolbar-vertical {
 	height: 20px;
 	font-size: 1em;
 	font-weight: normal;
+	line-height: 1.5em;
 }
